[gd_scene load_steps=9 format=3 uid="uid://dfbsgyui5g1ul"]

[ext_resource type="Script" uid="uid://rudh75ku4nkg" path="res://scenes/screens/level/level_003.gd" id="1_u2odx"]
[ext_resource type="Texture2D" uid="uid://bimhbg53n7c8q" path="res://assets/level_001/background_03.jpg" id="2_u2odx"]
[ext_resource type="PackedScene" uid="uid://ob0ovq4xg4jv" path="res://scenes/player/player.tscn" id="3_ivnsy"]
[ext_resource type="Script" uid="uid://blxxlvexrcda4" path="res://scenes/screens/level/explosion.gd" id="4_byjl7"]
[ext_resource type="AudioStream" uid="uid://dne1idfkjcalw" path="res://assets/audio/explosion.wav" id="5_162s2"]
[ext_resource type="PackedScene" uid="uid://qml78epnsbko" path="res://scenes/entity/enemies/enemy_moving.tscn" id="5_rc5uh"]
[ext_resource type="AudioStream" uid="uid://bcog7pp04jj02" path="res://assets/audio/level_001.wav" id="7_syekd"]

[sub_resource type="GDScript" id="GDScript_4b27v"]

[node name="Level3" type="Node2D"]
script = ExtResource("1_u2odx")

[node name="ObjectParent" type="Node2D" parent="."]
position = Vector2(540, 960)

[node name="Background" type="Sprite2D" parent="ObjectParent"]
z_index = -10
position = Vector2(-0.9999695, 91.00012)
scale = Vector2(10.701796, 14.716973)
texture = ExtResource("2_u2odx")

[node name="Player" parent="ObjectParent" instance=ExtResource("3_ivnsy")]
position = Vector2(0.9999995, 587)
scale = Vector2(5, 5)

[node name="Projectiles" type="Node2D" parent="ObjectParent"]
position = Vector2(-540, -960)

[node name="Explosion" type="Node" parent="ObjectParent"]
script = ExtResource("4_byjl7")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="ObjectParent/Explosion"]
stream = ExtResource("5_162s2")

[node name="Enemies" type="Node" parent="ObjectParent"]
script = SubResource("GDScript_4b27v")

[node name="EnemyMoving" parent="ObjectParent/Enemies" instance=ExtResource("5_rc5uh")]
position = Vector2(734, 957)

[node name="EnemyMoving2" parent="ObjectParent/Enemies" instance=ExtResource("5_rc5uh")]
position = Vector2(992, 374)

[node name="Texts" type="Node" parent="ObjectParent"]

[node name="objective" type="Label" parent="ObjectParent/Texts"]
modulate = Color(1, 1, 1, 0)
offset_left = 4.0
offset_top = 797.0
offset_right = 1090.0
offset_bottom = 1216.0
theme_override_font_sizes/font_size = 80
text = "Destroy all Ships
Swipe to move left and right
tap to shoot"

[node name="congrats" type="Label" parent="ObjectParent/Texts"]
modulate = Color(1, 1, 1, 0)
offset_left = 222.0
offset_top = 864.0
offset_right = 836.0
offset_bottom = 1050.0
theme_override_font_sizes/font_size = 80
text = "You Win !!!"

[node name="failure" type="Label" parent="ObjectParent/Texts"]
modulate = Color(1, 1, 1, 0)
offset_left = 222.0
offset_top = 864.0
offset_right = 836.0
offset_bottom = 1050.0
theme_override_font_sizes/font_size = 80
text = "You Lose!!!"

[node name="Ammo_text" type="Label" parent="ObjectParent/Texts"]
offset_left = 688.0
offset_top = 46.0
offset_right = 887.0
offset_bottom = 116.0
theme_override_font_sizes/font_size = 50
text = "Ammo : "

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_syekd")

[connection signal="ammo_done" from="ObjectParent/Player" to="." method="_on_player_ammo_done"]
[connection signal="laser_shot" from="ObjectParent/Player" to="." method="_on_player_laser_shot"]
